feat: able to play current game now and also implemented restart current game endpoint and frontend implementation